--- a/box/webcontent/index.html
+++ b/box/webcontent/index.html
@@ -6,9 +6,16 @@
     <!-- Site should have a header with link pages to each type of attack. Cluster bomb is the exception; that requires more work. -->
     <br></br>
     <h3>What is Burp Intruder?</h3>
-    <p>Burp intruder is a tool in burp used to blah blah blah</p>
+    <p>Burp intruder is a tool in burp used for automating customized attacks against web applications. It enables you to configure attacks that send the same HTTP request over and over again, inserting different payloads into predefined positions each time.</p>
     <ul>
-    <li><a href = "sniper/index.html">Sniper</a></li>  
+    <li><a href = "sniper/index.html">Sniper</a></li>
+    <li><a href = "battering_ram/battering_ram.html">Battering Ram</a></li>
+    <li><a href = "pitchfork/pitchfork.html">Pitchfork</a></li>
+    <li><a href = "cluster_bomb/cluster_bomb.html">Cluster Bomb</a></li>  
+    </ul>
+    <h3>Basic Terminology</h3>
+    <ul>
+      <li>Payload - In these situations, this refers to wordlists that will contain some input information, including usernames and/or passwords.</li>
     </ul>
   </body>
 </html>
