--- a/box/webcontent/cluster_bomb/cluster_bomb.html
+++ b/box/webcontent/cluster_bomb/cluster_bomb.html
@@ -2,11 +2,11 @@
 <html>
   <body>
     <ul>
-    <a href = "../index.html">Home</a>
-    <a href = "sniper/index.html">Sniper</a>
-    <a href = "battering_ram/battering_ram.html">Battering Ram</a><
-    <a href = "pitchfork/pitchfork.html">Pitchfork</a>
-    <a href = "cluster_bomb/cluster_bomb.html">Cluster Bomb</a>  
+      <a href = "../index.html">Home</a>
+      <a href = "../sniper/index.html">Sniper</a>
+      <a href = "../battering_ram/battering_ram.html">Battering Ram</a><
+      <a href = "../pitchfork/pitchfork.html">Pitchfork</a>
+      <a href = "../cluster_bomb/cluster_bomb.html">Cluster Bomb</a>  
     </ul>
     <h1> Cluster Bomb </h1>
     <br></br>
@@ -21,6 +21,6 @@
     <h3>How many requests does it make?</h3>
     <p>Clusterbomb will make payload1.length * payload2.length requests.  </p>
     <h3>What is cluster bomb useful for?</h3>
-    <p>Cluster bomb is the brute force attempt of pitchfork. If the inputs are completely unrelated, you use cluster bomb and pray something works out.</p> 
+    <p>Cluster bomb is the brute force attempt of pitchfork. If the inputs are completely unrelated, you use cluster bomb and pray something works out.</p>
   </body>
 </html>
