--- a/box/webcontent/pitchfork/pitchfork.html
+++ b/box/webcontent/pitchfork/pitchfork.html
@@ -2,11 +2,11 @@
 <html>
   <body>
     <ul>
-    <a href = "../index.html">Home</a>
-    <a href = "sniper/index.html">Sniper</a>
-    <a href = "battering_ram/battering_ram.html">Battering Ram</a><
-    <a href = "pitchfork/pitchfork.html">Pitchfork</a>
-    <a href = "cluster_bomb/cluster_bomb.html">Cluster Bomb</a>  
+      <a href = "../index.html">Home</a>
+      <a href = "../sniper/index.html">Sniper</a>
+      <a href = "../battering_ram/battering_ram.html">Battering Ram</a><
+      <a href = "../pitchfork/pitchfork.html">Pitchfork</a>
+      <a href = "../cluster_bomb/cluster_bomb.html">Cluster Bomb</a>  
     </ul>
     <h1> Pitchfork </h1>
     <br></br>
@@ -21,6 +21,6 @@
     <h3>How many requests does it make?</h3>
     <p>Pitchfork will make as many requests as the length of the shortest payload. </p>
     <h3>What is pitchfork useful for?</h3>
-    <p>Very useful when an attack needs 2 different but related parameters. For example, the username and password in the examples above.</p> 
+    <p>Very useful when an attack needs 2 different but related parameters. For example, the username and password in the examples above.</p>
   </body>
 </html>
