--- a/box/webcontent/sniper/index.html
+++ b/box/webcontent/sniper/index.html
@@ -2,11 +2,11 @@
 <html>
   <body>
     <ul>
-    <a href = "../index.html">Home</a>
-    <a href = "sniper/index.html">Sniper</a>
-    <a href = "battering_ram/battering_ram.html">Battering Ram</a><
-    <a href = "pitchfork/pitchfork.html">Pitchfork</a>
-    <a href = "cluster_bomb/cluster_bomb.html">Cluster Bomb</a>  
+      <a href = "../index.html">Home</a>
+      <a href = "../sniper/index.html">Sniper</a>
+      <a href = "../battering_ram/battering_ram.html">Battering Ram</a><
+      <a href = "../pitchfork/pitchfork.html">Pitchfork</a>
+      <a href = "../cluster_bomb/cluster_bomb.html">Cluster Bomb</a>  
     </ul>
     <h1> Sniper </h1>
     <br></br>
