--- a/box/webcontent/battering_ram/battering_ram.html
+++ b/box/webcontent/battering_ram/battering_ram.html
@@ -3,10 +3,10 @@
   <body>
     <ul>
     <a href = "../index.html">Home</a>
-    <a href = "sniper/index.html">Sniper</a>
-    <a href = "battering_ram/battering_ram.html">Battering Ram</a><
-    <a href = "pitchfork/pitchfork.html">Pitchfork</a>
-    <a href = "cluster_bomb/cluster_bomb.html">Cluster Bomb</a>  
+    <a href = "../sniper/index.html">Sniper</a>
+    <a href = "../battering_ram/battering_ram.html">Battering Ram</a><
+    <a href = "../pitchfork/pitchfork.html">Pitchfork</a>
+    <a href = "../cluster_bomb/cluster_bomb.html">Cluster Bomb</a>
     </ul>
     <h1> Battering Ram </h1>
     <br></br>
@@ -15,6 +15,6 @@
     <h3>How many requests does it make?</h3>
     <p>Battering ram will make payload.length * parameters requests.</p>
     <h3>What is battering ram useful for?</h3>
-    <p>You'll use battering ram rarely, but it's useful for when you have to input the same thing in multiple parameters.</p> 
+    <p>You'll use battering ram rarely, but it's useful for when you have to input the same thing in multiple parameters.</p>
   </body>
 </html>
